--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -29,3 +29,8 @@
     font-display: swap;
     src: url(https://fonts.gstatic.com/s/roboto/v27/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
 };
+
+
+.detailed-info p {
+    font-family: 'Roboto', sans-serif;
+}
