--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./base/typography";
 @import "./base/base";
 @import "./components/buttons";
+@import "./components/filters";
 @import "./components/animations";
 @import "./layout/flex";
 @import "./layout/footer";
