--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -17,6 +17,9 @@ $font-size: (
   filters: 1.5em,
 );
 
+$line-height: 1.4;
+$lines-to-show: 5;
+
 $breakpoints: (
   tablet: 768px,
   tablet-landscape: 992px,
