--- a/assets/scss/components/_filters.scss
+++ b/assets/scss/components/_filters.scss
@@ -3,36 +3,79 @@
 #ingredients-options-list,
 #ingredient-search {
   background-color: $ingredient-color;
+  flex-basis: 100%;
 }
 #ustensils-filters-button,
 #ustensils-options-list,
 #ustensils-search {
   background-color: $ustensils-color;
+  flex-basis: 100%;
 }
 #appliances-filters-button,
 #appliances-options-list,
 #appliances-search {
   background-color: $appliance-color;
+  flex-basis: 100%;
 }
 
 /*Filters shape*/
 #filters {
   justify-content: flex-start;
   align-items: center;
+  flex-direction: column;
+  @include desktop {
+    flex-direction: row;
+  }
   .option-wrapper {
-    flex-basis: 20%;
-    margin-right: 1em;
-    height: 69px;
+    position: relative;
+    display: inline-block;
+    height: 50px;
+    width: 100%;
+    margin-bottom: 1em;
+    @include desktop {
+      height: 69px;
+      flex-basis: 20%;
+      margin-right: 1em;
+    }
     .filters-button {
       border-radius: $border-radius;
-      padding: 1.5em 0.5em 1.5em 1.5em;
+      padding: 0.7em 0.5em 0.7em 0.7em;
+      cursor: pointer;
+      flex-basis: 100%;
+      @include desktop {
+        padding: 1.5em 0.5em 1.5em 1.5em;
+      }
+    }
+    .dropdown-content{
+      position: absolute;
+      left: 0;
+      z-index: 1;
+      left: 0;
+      color: #fff;
+      width: 100%;
+      max-height: 400px;
+      border-radius: 0 0 $border-radius $border-radius;
+      padding: 1.5em;
+      padding-top: 0;
+      display: none;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: space-between;
+      flex-wrap: wrap;
+      .option {
+        flex-basis: 35%;
+        position: relative;
+        display: block;
+        cursor: pointer;
+        transition: all 0.5s;
+        }
     }
     input {
       border: none;
       color: #fff;
       font-size: 1.3em;
       font-weight: bold;
-      width: 90%;
+      width: 100%;
       &::-webkit-input-placeholder {
         opacity: 1;
         color: #fff;
@@ -62,26 +105,26 @@
 .arrow::after {
   content: "";
   position: absolute;
-  bottom: 0px;
+  bottom: 3px;
   width: 0.15rem;
-  height: 100%;
+  height: 70%;
   transition: all 0.5s;
 }
 .arrow::before {
-  left: -12px;
+  left: -20px;
   transform: rotate(45deg);
   background-color: #fff;
 }
 .arrow::after {
-  left: 0px;
+  right: 10px;
   transform: rotate(-45deg);
   background-color: #fff;
 }
 .open .arrow::before {
-  left: -12px;
+  left: -20px;
   transform: rotate(-45deg);
 }
 .open .arrow::after {
-  left: 0px;
+  left: 10px;
   transform: rotate(45deg);
 }
