--- a/assets/scss/components/_filters.scss
+++ b/assets/scss/components/_filters.scss
@@ -1,17 +1,17 @@
 /*Filters colors*/
-#ingredients-filters-button,
+#ingredients-filter-button,
 #ingredients-options-list,
 #ingredient-search {
   background-color: $ingredient-color;
   flex-basis: 100%;
 }
-#ustensils-filters-button,
+#ustensils-filter-button,
 #ustensils-options-list,
 #ustensils-search {
   background-color: $ustensils-color;
   flex-basis: 100%;
 }
-#appliances-filters-button,
+#appliances-filter-button,
 #appliances-options-list,
 #appliances-search {
   background-color: $appliance-color;
@@ -28,47 +28,76 @@
   }
   .option-wrapper {
     position: relative;
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
     height: 50px;
     width: 100%;
     margin-bottom: 1em;
     @include desktop {
       height: 69px;
-      flex-basis: 20%;
+      width: 20em;
       margin-right: 1em;
+    }
+    .open {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: all;
+      
     }
     .filters-button {
       border-radius: $border-radius;
       padding: 0.7em 0.5em 0.7em 0.7em;
+      justify-content: space-between;
+      align-items: center;
       cursor: pointer;
       flex-basis: 100%;
+      border: none;
       @include desktop {
-        padding: 1.5em 0.5em 1.5em 1.5em;
+        padding-left: 1.5em;
       }
     }
     .dropdown-content{
       position: absolute;
-      left: 0;
-      z-index: 1;
+      top: 44px;
       left: 0;
       color: #fff;
       width: 100%;
-      max-height: 400px;
+      max-height: 200px;
       border-radius: 0 0 $border-radius $border-radius;
       padding: 1.5em;
       padding-top: 0;
-      display: none;
+      opacity: 0;
+      visibility: hidden;
+      display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: space-between;
       flex-wrap: wrap;
+      @include desktop {
+        top: 63px;
+        max-height: 400px;
+      }
+      .open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: all;
+      }
       .option {
         flex-basis: 35%;
         position: relative;
         display: block;
         cursor: pointer;
         transition: all 0.5s;
-        }
+      }
+    }
+    .filter-name{
+      display: inline-block;
+      border: none;
+      color: #fff;
+      font-size: 1.3em;
+      font-weight: bold;
+      width: 100%;
+      text-align: left;
     }
     input {
       border: none;
@@ -76,21 +105,17 @@
       font-size: 1.3em;
       font-weight: bold;
       width: 100%;
-      &::-webkit-input-placeholder {
-        opacity: 1;
-        color: #fff;
+      height: 100%;
+      line-height: 2em;
+      padding-right: 2em;
+      &:focus{
+        border: none;
       }
-      &::-moz-placeholder {
-        /* Firefox 19+ */
-        opacity: 1;
-        color: #fff;
-      }
-      &:-ms-input-placeholder {
-        /* Firefox 19+ */
-        opacity: 1;
-        color: #fff;
-      }
-    }
+      &::placeholder{
+        overflow: visible;
+        text-overflow: ellipsis;
+      }     
+    }    
   }
 }
 
@@ -105,26 +130,27 @@
 .arrow::after {
   content: "";
   position: absolute;
-  bottom: 3px;
   width: 0.15rem;
-  height: 70%;
+  height: 100%;
   transition: all 0.5s;
+  @include desktop{
+  }
 }
 .arrow::before {
-  left: -20px;
+  left: -3px;
   transform: rotate(45deg);
   background-color: #fff;
 }
 .arrow::after {
-  right: 10px;
+  right: 6px;
   transform: rotate(-45deg);
   background-color: #fff;
 }
 .open .arrow::before {
-  left: -20px;
+  left: -3px;
   transform: rotate(-45deg);
 }
 .open .arrow::after {
-  left: 10px;
+  right: 6px;
   transform: rotate(45deg);
 }
