--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,23 +1,48 @@
 @import "./main.scss";
 
-.top-search {
-  position: relative;
-  flex-basis: 100%;
-  max-width: 1440px;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-  #site-search {
-    height: 69px;
-    width: 100%;
-    background: #e7e7e7;
-    border-radius: $border-radius;
-    border: none;
-    padding-left: 1em;
-    padding-right: 5em;
-    text-overflow: ellipsis;
+#main-search {
+  text-align: left;
+  cursor: auto;
+  padding-right: 5rem;
+}
+
+article{
+  height: 364px;
+  flex-basis: 380px;
+  figure{
+    height: 178px;
+    background-color: $bg-recipe-pic;
   }
-  button {
+  div:first-of-type{
+    height: 186px;
+    background-color: $bg-recipe;
+    font-size: 0.82rem;
+  }
+  div:nth-of-type(1){
+    height: 28%;    
+  }
+  div:nth-of-type(2){
+    height: 70%;
+    overflow: hidden;
+  }
+  ul,p{
+    display: block; /* Fallback for non-webkit*/ 
+    display: -webkit-box;
+    height: $line-height*$lines-to-show;
+    font-size: 0.82rem;
+    line-height: 1.2em;
+    -webkit-line-clamp: $lines-to-show;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: -o-ellipsis-lastline;
+    text-overflow: ellipsis;
+    flex-basis: 48%;
+  }
+}
+
+
+
+ /* button {
     position: absolute;
     right: 2em;
     background: none;
@@ -82,7 +107,7 @@
     align-items: flex-start;
     flex: 0 0 75%;
     .ingredient-list, p {
-      display: block; /* Fallback for non-webkit */
+      display: block; /* Fallback for non-webkit 
       display: -webkit-box;
       height: $line-height*$lines-to-show;
       font-size: map-get($font-size, det-info);
@@ -95,4 +120,4 @@
       flex-basis: 48%;
     }
   }
-}
+}*/
