--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,4 +1,4 @@
-header {
+/*header {
   padding: 2em 2.5em 1em;
   justify-content: center;
   align-items: center;
@@ -10,3 +10,4 @@ header {
     }
   }
 }
+*/
