--- a/assets/scss/abstracts/_variables_overrides.scss
+++ b/assets/scss/abstracts/_variables_overrides.scss
@@ -16,8 +16,8 @@ $dropdown-link-hover-bg:            rgba(#fff,0.2);
 $dropdown-link-active-color: none;
 $dropdown-link-active-bg: none;
 
-/*SHAPES*/
-
+/*FONT*/
+$font-family-base: 'Lato', sans-serif;
 
 /*SIZES*/
 $h2-font-size:  1.18rem;
