issue with bg solved

--- a/assets/scss/components/_subsearchs.scss
+++ b/assets/scss/components/_subsearchs.scss
@@ -1,10 +1,10 @@
-#ingredients-tag-list{
+#ingredients__taglist{
   background-color: $primary;
 }
-#appliances-tag-list{
+#appliances__taglist{
   background-color: $success;
 }
-#ustensils-tag-list{
+#ustensils__taglist{
   background-color: $secondary;
 }
 
