subsearch button done

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,5 +1,12 @@
 @import "./main.scss";
 
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #192a56 transparent;
+}
+
+
 
 #main-search {
   text-align: left;
