fixed: sub search refactoring, everything works

--- a/assets/scss/components/_subsearchs.scss
+++ b/assets/scss/components/_subsearchs.scss
@@ -1,14 +1,14 @@
-#sub-search__Ingrédient{
+#sub-search__ingredients{
   .sub-search__button, input, .sub-search__taglist{
     background-color: $primary;
   }
 }
-#sub-search__Appareils{
+#sub-search__appliances{
   .sub-search__button, input, .sub-search__taglist{
     background-color: $teal;
   }
 }
-#sub-search__Ustensiles{
+#sub-search__ustensils{
   .sub-search__button, input, .sub-search__taglist{
     background-color: $secondary;
   }
